--- a/pt/contribute.po
+++ b/pt/contribute.po
@@ -1,5 +1,6 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2018
+# Luis <luisfsr@opmbx.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: björn petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Luis <luisfsr@opmbx.org>, 2019\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,19 +32,23 @@ msgstr ""
 
 #: ../en/contribute.md:7
 msgid "# Channels and repositories"
-msgstr ""
+msgstr "# Canais e repositórios"
 
 #: ../en/contribute.md:10
 msgid ""
 "- [Delta Chat support forum](https://support.delta.chat) for wider\n"
 "  feature discussions and getting support."
 msgstr ""
+"- [Fórum do Delta Chat](https://support.delta.chat) para discussões\n"
+"  abrangentes, funcionalidades e ajuda."
 
 #: ../en/contribute.md:12
 msgid ""
 "- [#deltachat on freenode]({% include webirc-url %}) for day to day "
 "communications."
 msgstr ""
+"- [#deltachat no freenode]({% include webirc-url %}) para comunicações "
+"diárias."
 
 #: ../en/contribute.md:16
 msgid ""
@@ -51,16 +56,20 @@ msgid ""
 "  list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
 "  for community discussions and news."
 msgstr ""
+"- [Lista de e-mails do Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
+"  para discussões em comunidade e novidades."
 
 #: ../en/contribute.md:19
 msgid ""
 "- [Delta Chat repositories](https://github.com/deltachat/) where you can \n"
 "  find the code for DeltaChat apps and this web site."
 msgstr ""
+"- [Repositórios do Delta Chat](https://github.com/deltachat/) onde está \n"
+"  o código do DeltaChat e deste site."
 
 #: ../en/contribute.md:21
 msgid "# Translations and Bug Reports "
-msgstr ""
+msgstr "# Traduções e relatórios de erro"
 
 #: ../en/contribute.md:27
 msgid ""
@@ -70,20 +79,27 @@ msgid ""
 "- [Delta Chat iOS Issues](https://github.com/deltachat/deltachat-ios/issues)\n"
 "- [Core Library + Python Issues](https://github.com/deltachat/deltachat-core/issues)"
 msgstr ""
+"- [Traduções no Transifex](https://www.transifex.com/delta-chat/public/)\n"
+"- [Problemas no Delta Chat Android](https://github.com/deltachat/deltachat-android/issues)\n"
+"- [Problemas no Delta Chat Desktop](https://github.com/deltachat/deltachat-desktop/issues)\n"
+"- [Problemas no Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
+"- [Biblioteca básica + problemas do Python](https://github.com/deltachat/deltachat-core/issues)"
 
 #: ../en/contribute.md:30
 msgid ""
 "We are always looking for developers who want to help along and are familiar with \n"
 "C, Rust, Java, Swift, Javascript or Python on Android, iOS, Windows, Linux or Mac."
 msgstr ""
+"Sempre precisamos de desenvolvedores que queiram ajudar e conheçam \n"
+"C, Rust, Java, Swift, Javascript ou Python no Android, iOS, Windows, Linux ou Mac."
 
 #: ../en/contribute.md:33
 msgid "# Donate Money or devices"
-msgstr ""
+msgstr "# Doar dinheiro ou aparelhos"
 
 #: ../en/contribute.md:35
 msgid "If you want to support DeltaChat with money:"
-msgstr ""
+msgstr "Se você quiser ajudar com dinheiro:"
 
 #: ../en/contribute.md:39
 msgid ""
@@ -91,6 +107,9 @@ msgid ""
 "- PayPal or credit card: [paypal.me/deltachat](https://paypal.me/deltachat/20)\n"
 "- Send bitcoins to [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
 msgstr ""
+"- IBAN DE86100777770428658900, titular da conta (por favor sempre especificar): Björn Petersen, BIC NORSDE51XXX\n"
+"- PayPal ou cartão de crédito: [paypal.me/deltachat](https://paypal.me/deltachat/20)\n"
+"- Bitcoins [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
 
 #: ../en/contribute.md:41
 msgid ""
@@ -98,4 +117,4 @@ msgid ""
 "[We](imprint)'d love to take it!"
 msgstr ""
 "Precisamos de **aparelhos** para fins de teste. Você tem algum smartphone velho?\n"
-"[We](imprint)'d love to take it!"
+"[Gostaríamos](imprint)muito de obtê-lo!"
