--- a/pt/download.po
+++ b/pt/download.po
@@ -1,6 +1,6 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2018
-# Luis <luisfsr@opmbx.org>, 2018
+# Luis <luisfsr@opmbx.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Luis <luisfsr@opmbx.org>, 2018\n"
+"Last-Translator: Luis <luisfsr@opmbx.org>, 2019\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,17 +32,19 @@ msgstr ""
 
 #: ../en/download.md:7
 msgid "# Delta/Android Downloads (Beta)"
-msgstr ""
+msgstr "# Delta/Android Downloads (Beta)"
 
 #: ../en/download.md:10
 msgid ""
 "[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/store/apps/details?id=chat.delta)\n"
 "[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 msgstr ""
+"[<img style=\"float:right\" src=\"../assets/home/get-it-on-gplay-beta.png\" alt=\"Beta testing on Google Play\" width=\"200\" />](https://play.google.com/store/apps/details?id=chat.delta)\n"
+"[<img style=\"float:right\" src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)"
 
 #: ../en/download.md:12
 msgid "Delta/Android is the most feature-rich and stable DeltaChat app. "
-msgstr ""
+msgstr "O Delta/Android é a versão mais estável e bem trabalhada. "
 
 #: ../en/download.md:17
 msgid ""
@@ -51,50 +53,66 @@ msgid ""
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %}), [contribute to the Android repo](https://github.com/deltachat/deltachat-android/). "
 msgstr ""
+"* [Baixe do F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
+"* [Baixe do Google Play Beta Channel](https://play.google.com/store/apps/details?id=chat.delta)\n"
+"* [Baixe o APK](https://github.com/deltachat/deltachat-android/releases) (somente usuários experientes)\n"
+"* [Ver histórico de atualizações]({% include changelog-url %}) e [contribua no repositório do Android](https://github.com/deltachat/deltachat-android/). "
 
 #: ../en/download.md:20
 msgid "# Delta/Desktop Downloads (Beta)"
-msgstr ""
+msgstr "# Delta/Desktop Downloads (Beta)"
 
 #: ../en/download.md:22
 msgid ""
 "Delta/Desktop is well usable and can be operated standalone or in "
 "conjunction with Android or iOS. "
 msgstr ""
+"O Delta/Desktop é bem usável, independentemente ou em paralelo com o Android"
+" ou o iOS. "
 
 #: ../en/download.md:24
 msgid ""
 "* [download for Linux from "
 "flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 msgstr ""
+"* [baixe pro Linux do "
+"flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 
 #: ../en/download.md:26
 msgid ""
 "* [download for Mac from our github release "
 "page](https://github.com/deltachat/deltachat-desktop/releases/).  "
 msgstr ""
+"* [baixe pro Mac do github](https://github.com/deltachat/deltachat-"
+"desktop/releases/).  "
 
 #: ../en/download.md:28
 msgid ""
 "* [Windows support pending, help needed!](https://github.com/deltachat"
 "/deltachat-desktop/issues/606) "
 msgstr ""
+"* [Pendendo versões pro Windows. Precisamos de "
+"ajuda!](https://github.com/deltachat/deltachat-desktop/issues/606) "
 
 #: ../en/download.md:30
 msgid ""
 "* [FAQ multiclient](help#multiclient) page on how to synchronize Desktop "
 "with another Delta app. "
 msgstr ""
+"* [FAQ multicliente](help#multiclient): veja como sincronizar várias "
+"instâncias do Delta Chat."
 
 #: ../en/download.md:33
 msgid ""
 "* [View Changelog](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md),\n"
 "  [contribute to Desktop repository](https://github.com/deltachat/deltachat-desktop/). "
 msgstr ""
+"* [Veja o histórico de atualizações](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md) e\n"
+"  [contribua no repositório do Desktop](https://github.com/deltachat/deltachat-desktop/). "
 
 #: ../en/download.md:36
 msgid "# Delta/iOS on TestFlight (Beta)"
-msgstr ""
+msgstr "# Delta/iOS no TestFlight (Beta)"
 
 #: ../en/download.md:38
 msgid ""
@@ -111,26 +129,33 @@ msgid ""
 "Delta/iOS supports basic functionality but not all features offered by Android or Desktop. \n"
 "Betas are distributed via Testflight. "
 msgstr ""
+"O Delta/iOS tem as funcionalidades básicas, mas não todas aquelas do Android e Desktop. \n"
+"Versões beta são distribuídas via Testflight. "
 
 #: ../en/download.md:43
 msgid ""
 "- [testflight invite page](https://testflight.apple.com/join/WVoYFOZe) for "
 "your iPhone or iPad."
 msgstr ""
+"- [Página de convite do "
+"testflight](https://testflight.apple.com/join/WVoYFOZe) para o iPhone ou "
+"iPad."
 
 #: ../en/download.md:45
 msgid ""
 "- [contribute to iOS development](https://github.com/deltachat/deltachat-"
 "ios/). "
 msgstr ""
+"- [contribua para desenvolver no iOS](https://github.com/deltachat"
+"/deltachat-ios/). "
 
 #: ../en/download.md:47
 msgid "- Scan this QR code with the camera app of your iPhone/iPad"
-msgstr ""
+msgstr "- Escaneie este código QR com seu iPhone/iPad"
 
 #: ../en/download.md:49
 msgid "  ![QRCode](../assets/home/deltachat_testflight_qrcode.png)"
-msgstr ""
+msgstr "  ![Código QR](../assets/home/deltachat_testflight_qrcode.png)"
 
 #: ../en/download.md:52
 msgid "# Verify Downloads"
@@ -149,12 +174,16 @@ msgid ""
 "* For F-Droid downloads:  \n"
 "  `{% include fingerprint-f-droid %}`"
 msgstr ""
+"* Para o F-Droid:  \n"
+"  `{% include fingerprint-f-droid %}`"
 
 #: ../en/download.md:60
 msgid ""
 "* Other APK downloads:  \n"
 "  `{% include fingerprint-local %}`"
 msgstr ""
+"* Outros APKs:  \n"
+"  `{% include fingerprint-local %}`"
 
 #: ../en/download.md:63
 msgid ""
