--- a/pt/gdpr.po
+++ b/pt/gdpr.po
@@ -1,5 +1,6 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2019
+# Luis <luisfsr@opmbx.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2019-01-27 23:24+0000\n"
-"Last-Translator: björn petersen <r10s@b44t.com>, 2019\n"
+"Last-Translator: Luis <luisfsr@opmbx.org>, 2019\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,34 +32,43 @@ msgstr ""
 
 #: ../en/gdpr.md:7
 msgid "# Privacy by Design"
-msgstr ""
+msgstr "# Privacidade por \"Design\""
 
 #: ../en/gdpr.md:10
 msgid ""
 "- **Confidentiality**: End-to-end encryption by default, by implementing [Autocrypt\n"
 "  Level 1](https://autocrypt.org)."
 msgstr ""
+"- **Confidencialidade**: Criptografia ponta a ponta por padrão, pela implementação do [Autocrypt\n"
+"  Nível 1](https://autocrypt.org)."
 
 #: ../en/gdpr.md:12
 msgid ""
 "- **Data minimization**: No alignment or uploading of the address-book "
 "content."
 msgstr ""
+"- **Minimização de dados**: Sem sincronização ou entrega do livro de "
+"endereços."
 
 #: ../en/gdpr.md:14
 msgid ""
 "- **Data avoidance**: No Delta Chat server, no processing of personal data."
 msgstr ""
+"- **Rejeição de dados**: Sem servidor do Delta Chat, não ocorre "
+"processamento de dados pessoais."
 
 #: ../en/gdpr.md:17
 msgid "# Further Compliance to the GDPR "
-msgstr ""
+msgstr "# Ainda mais conformidade com o GDPR "
 
 #: ../en/gdpr.md:19
 msgid ""
 "- Does not require any **consent** (article 7 GDPR) from the users or their "
 "contacts (data subjects), because no address-book-data is transmitted."
 msgstr ""
+"- Não necessita qualquer **consentimento** (artigo 7 do GDPR) dos usuários "
+"ou seus contatos (sujeitos dos dados), já que o livro de endereços não é "
+"transmitido."
 
 #: ../en/gdpr.md:21
 msgid ""
@@ -66,18 +76,25 @@ msgid ""
 "controller (organisation), because no additional third party will process "
 "the E-Mail related personal data. "
 msgstr ""
+"- Pode ser usado **sem necessidade de contratação ou instruções** de "
+"qualquer entidade controladora (organização), visto que nenhum terceiro a "
+"mais irá processar o e-mail e dados pessoais correlatos."
 
 #: ../en/gdpr.md:23
 msgid ""
 "# How data controllers (organizations) benefit from using Delta Chat in "
 "complying to the GDPR"
 msgstr ""
+"# Como controladores de dados (organizações) beneficiam-se ao usar o Delta "
+"Chat em termos de  cumprir o GDPR"
 
 #: ../en/gdpr.md:26
 msgid ""
 "- Creates **no additional information requirements** for the controller towards direct or indirect data subjects \n"
 "  regarding any collection of address-book-data, article 13, 14 GDPR."
 msgstr ""
+"- Não gera **requisitos adicionais de informação** para o controlador direta ou indiretamente quanto aos sujeitos de dados \n"
+"  relativamente a qualquer coleta de dados de livros de endereços, artigo 13, 14 do GDPR."
 
 #: ../en/gdpr.md:28
 msgid ""
@@ -85,6 +102,9 @@ msgid ""
 "Chat (Article 35 GDPR), because it processes no particular additional data "
 "beyond E-Mail messenging."
 msgstr ""
+"- Dispensa **avaliação de impacto de proteção de dados** a ser feita para o "
+"Delta Chat (Artigo 35 do GDPR), porque nenhum dado particular a mais é "
+"processado que as mensagens de e-mail."
 
 #: ../en/gdpr.md:33
 msgid ""
@@ -93,12 +113,18 @@ msgid ""
 "  on eventual **evidence documentation**, (article 30 GDPR) \n"
 "  as well as on the **data protection certification process**, Article 25 (3), 42 GDPR."
 msgstr ""
+"- Adicionar medidas de privacidade do Delta Chat ao \n"
+"  **histórico de atividades processadas** pode gerar um impacto positivo \n"
+"  em eventual **documentação de evidências**, (artigo 30 do GDPR) \n"
+"  bem como no **processo de certificação de proteção de dados**, artigo 25 (3), 42 do GDPR."
 
 #: ../en/gdpr.md:36
 msgid ""
 "- The **record of processing activities** linked to the messenger-communication is\n"
 "  reduced to identifying the email-providers and recording their activities, Article 30 (2) GDPR."
 msgstr ""
+"- O **histórico de processamento de atividades** ligado à comunicação pelo mensageiro\n"
+"reduz-se a identificar os provedores de e-mail e gravar suas atividades, artigo 30 (2) do GDPR."
 
 #: ../en/gdpr.md:40
 msgid ""
@@ -106,9 +132,14 @@ msgid ""
 "  are generally also limited to the communication data processed \n"
 "  by the controller and the email providers."
 msgstr ""
+"- Riscos remanescentes aos direitos e liberdades das pessoas naturais \n"
+"  são, geralmente, também limitados aos dados de comunicação processados \n"
+"  pelo controlador e provedores de e-mail."
 
 #: ../en/gdpr.md:43
 msgid ""
 "This statement reflects the General Data Protection Regulation (GDPR) as of "
 "16.05.2018."
 msgstr ""
+"As afirmações aqui contidas refletem a redação de 16/05/2018 do Regulamento "
+"Geral sobre a Proteção de Dados (GDPR)."
