--- a/_posts/2019-03-30-uxreport.md
+++ b/_posts/2019-03-30-uxreport.md
@@ -1,13 +1,13 @@
 ---
-title: Seven key findings from first Delta Chat UX testing report
+title: Key findings from first Delta Chat UX testing report
 author: xenia,holger
 ---
 
 Our [user-testing report](../assets/blog/Delta-Chat-UX-test-report1.pdf) is now out.
-The user-testing took place in Kyiv1 on October 30 and 31, 2018
-and involved 12 testers, 10 coming from journalistic and NGO activist
-user-groups, and 2 being local tech-enthusiasts.  The report lists seven 
-key findings and details how participants dealt with solving four tasks. 
+The user-testing took place in Kyiv end October 2018 and involved 12 testers, 
+10 coming from journalistic and NGO activist user-groups, and 2 being
+local tech-enthusiasts. The report highlights seven key findings and 
+references some of the work that already happened since the testing happened.
 
 <a href="../assets/blog/Delta-Chat-UX-test-report1.pdf">
     <img src="../assets/blog/dc-uxreport1.png" 
