mention it's the first

--- a/_posts/2019-03-30-uxreport.md
+++ b/_posts/2019-03-30-uxreport.md
@@ -3,7 +3,7 @@ title: Key findings from first Delta Chat UX testing report
 author: xenia,holger
 ---
 
-Our [user-testing report](../assets/blog/Delta-Chat-UX-test-report1.pdf) is now out.
+Our [first user-testing report](../assets/blog/Delta-Chat-UX-test-report1.pdf) is out.
 The user-testing took place in Kyiv end October 2018 and involved 12 testers, 
 10 coming from journalistic and NGO activist user-groups, and 2 being
 local tech-enthusiasts. The report highlights seven key findings and 
