--- a/_posts/2019-03-30-uxreport.md
+++ b/_posts/2019-03-30-uxreport.md
@@ -1,5 +1,5 @@
 ---
-title: Key findings from first Delta Chat UX testing report
+title: Key findings of first Delta Chat UX testing in Kyiv
 author: xenia,holger
 ---
 
