--- a/pt/help.po
+++ b/pt/help.po
@@ -139,7 +139,7 @@ msgid ""
 "there."
 msgstr ""
 "Outras mensagens não aparecem automaticamente. Você poderá as ver no menu "
-"princial em **Requisições de contato** e, se desejar, comece a conversar."
+"principal em **Requisições de contato** e, se desejar, comece a conversar."
 
 #: ../en/help.md:50
 msgid "## What about Spam?"
@@ -225,7 +225,7 @@ msgid ""
 msgstr ""
 "- \"Grupo verificado\" é uma funcionalidade experimental (Janeiro de 2019). \n"
 "  Utilizando-se de verificação participante por participante por código QR cria-se um\n"
-"  grupo verificado.  Assim, reforça-se que a criptografia e2e está segura contra ataques \n"
+"  grupo verificado.  Assim, reforça-se que a criptografia ponta a ponta está segura contra ataques \n"
 "  do provedor ou da rede.  Porém, alguns testes e relatórios sugerem que mudanças no UX \n"
 "  e na implementação são necessárias. Discussões recentes podem ser vistas aqui: \n"
 "  https://countermitm.readthedocs.io/en/latest/new.html"
@@ -276,7 +276,7 @@ msgid ""
 "  thus e2e-encrypt messages with other Autocrypt-capable apps. "
 msgstr ""
 "- Sim. O DeltaChat implementa o padrão Autocrypt Nível 1 de modo \n"
-"  que faz criptografia e2e com aplicativos compatíveis. "
+"  que faz criptografia ponta a ponta com aplicativos compatíveis. "
 
 #: ../en/help.md:106
 msgid "## What do I have to do to activate the end-to-end-encryption?"
@@ -295,7 +295,7 @@ msgid ""
 "  If one of the chat partners uses a non-Autocrypt e-mail app later \n"
 "  messages are not encrypted until an Autocrypt-compliant app is available again. "
 msgstr ""
-"- O Delta Chat (e outros programas compatíveis com a tecnologia [Autocrypt](https://autocrypt.org)\n"
+"- O Delta Chat (e outros programas compatíveis com a tecnologia [Autocrypt](https://autocrypt.org) )\n"
 "  compartilham, na primeira mensagem, as chaves necessárias para ativar a criptografia ponta a ponta.          Depois todas as mensagens posteriores são criptografadas ponta a ponta automaticamente. \n"
 "Se um dos participantes da conversa não estiver usando um programa que comporte criptografia, a\n"
 "criptografia fica suspensa até ser reativada novamente, quando possível."
@@ -334,7 +334,7 @@ msgid ""
 "your answer will be end-to-end-encrypted as well."
 msgstr ""
 "- Se um **cadeadozinho** for exibido ao lado da mensagem, significa que ela "
-"está criptografada ponta a pona _e_ foi enviada por um dado usuário _bem "
+"está criptografada ponta a ponta _e_ foi enviada por um dado usuário _bem "
 "como_ sua resposta também será criptografada ponta a ponta."
 
 #: ../en/help.md:129
