--- a/ca/contribute.po
+++ b/ca/contribute.po
@@ -1,6 +1,6 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2018
-# Calbasi <joan@calbasi.net>, 2018
+# Calbasi <joan@calbasi.net>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Calbasi <joan@calbasi.net>, 2018\n"
+"Last-Translator: Calbasi <joan@calbasi.net>, 2019\n"
 "Language-Team: Catalan (https://www.transifex.com/delta-chat/teams/76181/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,13 +32,15 @@ msgstr ""
 
 #: ../en/contribute.md:7
 msgid "# Channels and repositories"
-msgstr ""
+msgstr "# Canals i repositoris"
 
 #: ../en/contribute.md:10
 msgid ""
 "- [Delta Chat support forum](https://support.delta.chat) for wider\n"
 "  feature discussions and getting support."
 msgstr ""
+"- [Fòrum de suport de Delta Chat](https://support.delta.chat) per converses més extenses\n"
+"  sobre funcionalitats i per rebre suport."
 
 #: ../en/contribute.md:12
 msgid ""
@@ -61,7 +63,7 @@ msgstr ""
 
 #: ../en/contribute.md:21
 msgid "# Translations and Bug Reports "
-msgstr ""
+msgstr "# Traduccions i informes d'errors"
 
 #: ../en/contribute.md:27
 msgid ""
@@ -80,11 +82,11 @@ msgstr ""
 
 #: ../en/contribute.md:33
 msgid "# Donate Money or devices"
-msgstr ""
+msgstr "# Donació de calés o dispositius"
 
 #: ../en/contribute.md:35
 msgid "If you want to support DeltaChat with money:"
-msgstr ""
+msgstr "Si voleu recolzar DeltaChat amb diners:"
 
 #: ../en/contribute.md:39
 msgid ""
