--- a/de/help.po
+++ b/de/help.po
@@ -1,11 +1,12 @@
 # Translators:
-# Ampli_fier, 2018
 # björn petersen <r10s@b44t.com>, 2018
 # Ettore Atalan <atalanttore@googlemail.com>, 2018
 # W R, 2019
 # Moni P. <monitx@deltachat.de>, 2019
 # Sebastian Schmitt <schmitt.sebastian@mailbox.org>, 2019
+# Ampli_fier, 2019
 # Sven, 2019
+# Schiri Nowski <schirinowski@gmail.com>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Sven, 2019\n"
+"Last-Translator: Schiri Nowski <schirinowski@gmail.com>, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,7 +51,7 @@ msgstr ""
 "- [Allgemein](#general)\n"
 "- [Gruppen](#groups)\n"
 "- [Verschlüsselung](#encryption)\n"
-"- [Multi-client](#multiclient)\n"
+"- [Multi-Client](#multiclient)\n"
 "- [Verschiedenes](#miscellaneous)"
 
 #: ../en/help.md:15
@@ -485,7 +486,7 @@ msgid ""
 "  However, some providers need special options to work properly; users have collected some of them in the forum at [Provider Overview](https://support.delta.chat/t/provider-overview/)"
 msgstr ""
 "- Mit ziemlich hoher Wahrscheinlichkeit: Ja :) \n"
-"Allerdings benötigen einige Anbieter besondere Optionen, um ordnungsgemäß zu funktionieren; eine von Nutzern erstellte Sammlung zu einigen Optionen findet sich unter [Provider Overview](https://support.delta.chat/t/provider-overview/)"
+"Allerdings benötigen einige Anbieter besondere Optionen, um ordnungsgemäß zu funktionieren; eine von Nutzern erstellte Sammlung zu einigen Optionen findet sich unter [Provider Overview](https://support.delta.chat/t/provider-overview/)."
 
 #: ../en/help.md:183
 msgid "## I'm interested in the technical details. Can you tell me more?"
