--- a/pl/blog.po
+++ b/pl/blog.po
@@ -1,6 +1,6 @@
 # Translators:
-# björn petersen <r10s@b44t.com>, 2018
 # Telegram Polska <sebek@life.pl>, 2018
+# björn petersen <r10s@b44t.com>, 2018
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:38+0000\n"
-"Last-Translator: Telegram Polska <sebek@life.pl>, 2018\n"
+"Last-Translator: björn petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Polish (https://www.transifex.com/delta-chat/teams/76181/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
