--- a/ru/index.po
+++ b/ru/index.po
@@ -1,6 +1,7 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2018
 # Andrei Guliaikin <lycoris@ya.ru>, 2019
+# Alexander, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:35+0000\n"
-"Last-Translator: Andrei Guliaikin <lycoris@ya.ru>, 2019\n"
+"Last-Translator: Alexander, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,6 +40,8 @@ msgid ""
 "<img src=\"../assets/logos/delta-chat.svg\" width=\"160\" style=\"float: "
 "left; margin: 20px;\" />"
 msgstr ""
+"<img src=\"../assets/logos/delta-chat.svg\" width=\"160\" style=\"float: "
+"left; margin: 20px;\" />"
 
 #: ../en/index.md:12
 msgid ""
@@ -51,6 +54,9 @@ msgid ""
 "**Delta Chat doesn't have their own servers** but uses the most massive and diverse open messaging \n"
 "system ever: the existing e-mail server network."
 msgstr ""
+"**У Delta Chat нет собственных серверов**, вместо них используется самая "
+"большая и распределенная открытая система обмена сообщениями: существующая "
+"сеть серверов электронной почты."
 
 #: ../en/index.md:18
 msgid ""
