--- a/uk/imprint.po
+++ b/uk/imprint.po
@@ -1,6 +1,6 @@
 # Translators:
-# björn petersen <r10s@b44t.com>, 2019
 # Iskatel Istiny <iskatel1@gmx.com>, 2019
+# björn petersen <r10s@b44t.com>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:40+0000\n"
-"Last-Translator: Iskatel Istiny <iskatel1@gmx.com>, 2019\n"
+"Last-Translator: björn petersen <r10s@b44t.com>, 2019\n"
 "Language-Team: Ukrainian (https://www.transifex.com/delta-chat/teams/76181/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
