--- a/ru/index.po
+++ b/ru/index.po
@@ -1,7 +1,7 @@
 # Translators:
 # björn petersen <r10s@b44t.com>, 2018
-# Andrei Guliaikin <lycoris@ya.ru>, 2019
 # Alexander, 2019
+# Andrei Guliaikin <lycoris@ya.ru>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-03-16 23:43+0200\n"
 "PO-Revision-Date: 2018-03-23 12:35+0000\n"
-"Last-Translator: Alexander, 2019\n"
+"Last-Translator: Andrei Guliaikin <lycoris@ya.ru>, 2019\n"
 "Language-Team: Russian (https://www.transifex.com/delta-chat/teams/76181/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,6 +63,8 @@ msgid ""
 "**Chat with anyone if you know their e-mail address, no need for them to install DeltaChat!** \n"
 "All you need is a standard e-mail account."
 msgstr ""
+"**Обменивайтесь сообщениями со всеми, чей адрес их электронной почты вы знаете, нет необходимости устанавливать приложение DeltaChat!** \n"
+"Всё что вам нужно, это стандартный аккаунт электронной почты."
 
 #: ../en/index.md:21
 msgid "# Screenshots Android, Desktop and iOS "
