--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -149,7 +149,7 @@ the future. Expect some news later in 2019 when the bots will be coming for you,
 riding on the waves of the coming Rustocalypse. 
 
 <img src="../assets/blog/dat-logo.png" width="100" style="float: right; margin-right: 10px" /> 
-Speaking of Rust, Sid, Franz and Matze were progressing continously on their with their Rust work on [Arso](https://arso.xyz/), a decentralized archiving project based on the [DAT P2P protocols](https://datproject.org/). Several conversations revolved around potential integrations of Delta Chat Bots with these decentralized archiving efforts. Conversations are about integrating decentralized approaches rather than trying to build "replace-the-world" platform projects that try to convince others to use and base everything on one's platform.  Arguably, decentralization projects often are often overly focus on technical decentralization but produce island platforms that do not integrate with one another.  The future of decentralization maybe lies more on **integrations at the UX level** so that users can make actual use of the wealth of interesting decentralization projects -- rather than adding yet more clever technical algorithms to any single project. 
+Speaking of Rust, Sid, Franz and Matze were progressing continously on their with their Rust work on [Arso](https://arso.xyz/), a decentralized archiving project based on the [DAT P2P protocols](https://datproject.org/). Several conversations revolved around potential integrations of Delta Chat Bots with these decentralized archiving efforts. Conversations are about integrating decentralized approaches rather than trying to build "replace-the-world" platform projects that try to convince others to use and base everything on one's platform.  Arguably, decentralization projects often are often overly focused on technical decentralization but produce island platforms that do not integrate with one another.  The future of decentralization maybe lies more on **integrations at the UX level** so that users can make actual use of the wealth of interesting decentralization projects -- rather than adding yet more clever technical algorithms to any single project. 
 
 <img src="../assets/blog/xyiv-ux2.jpg" width="200" style="float: left; margin-right: 10px" /> 
 Speaking about the future, we had Eileen from [SimplySecure](https://simplysecure.org/) with us 
@@ -175,7 +175,7 @@ better arrange for help.
 
 <img src="../assets/blog/xyiv-cards1.png" width="400" style="float: left; margin-right: 10px" /> 
 
-The game on sunday, secretly prepared by Xenia with graphics from Demian, marked kind of a culmination of an already eventful week. Participants, including locals, were put into two groups, "Cubes" and "Spheres".  Everyone drew a card and played a role -- journalist, whistleblower, spy, politician with each side co-ordinated by one person sitting on Delta Chat desktop at the "basecamp" location.  Players turned on location streaming and had to carry out a complex set of concurrent htasks, with a lot of fun ensuing dynamics and confusion.  Special points were gained when one side managed to "jail" the other side's politician or journalist.  
+The game on sunday, secretly prepared by Xenia with graphics from Demian, marked kind of a culmination of an already eventful week. Participants, including locals, were put into two groups, "Cubes" and "Spheres".  Players from both teams drew a card and played a role -- journalist, whistleblower, spy, politician with each side co-ordinated by one person sitting on Delta Chat desktop at the "basecamp" location.  Players turned on location streaming and had to carry out a complex set of concurrent htasks, with a lot of fun ensuing dynamics and confusion.  Special points were gained when one side managed to "jail" the other side's politician or journalist.  
 
 Co-incidentally, the sunday was also a religious culmination in it being the main day of ortodox eastern where everybody is out in the streets and churches.  
 <img src="../assets/blog/xyiv-church1b.jpg" width="200" style="float: right; margin-left: 10px" /> 
@@ -185,13 +185,12 @@ finding marked "dead drops" at 12 places inside the city. Dead drops contained f
 
 <img src="../assets/blog/xyiv-m.png" width="200" style="float: right; margin-left: 10px" /> 
 The game play involved a lot of Delta Chat features. Both groups quickly setup 
-"verified groups" as they provides an easy way to get everyone into a group quickly. 
-One young "politician" in a blue jacket was found hiding in strange places ...  It was certainly telling how problems and confusion escalated from the overall stress of trying to understand
+"verified groups" as they provide an easy way to get everyone into a group quickly. 
+One young "politician" in a blue jacket was found hiding in strange places ... it was certainly telling how problems and confusion escalated from the overall stress of trying to understand
 what's happening, lost connectivity, "abducted" devices etc.
 
 Several players were eager to repeat and refine the game in their home towns. Also some 
-secretive talks were overheart around "Operation Werewolf", possibly soon deployed to 
-your hometown.  Let further gaming commence :) 
+secretive talks were overheart around *Operation Werewolf* ... let further gaming commence :) 
 
 # The party and special thanks to ... 
 
