make it easier to contribute

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -77,7 +77,7 @@ Rust does thus not cause degradations. To make a longer story short,
 several Delta Chat developers are now learning Rust from the [Community
 Rust Book](https://doc.rust-lang.org/stable/book/) and are following
 DCC-Rust developments closely. Maybe some of you will join the fun and
-submit Pull Requests to make Delta Chat core safer? 
+do Pull Requests to make [the new DCC Rust core safer?](https://github.com/deltachat/deltachat-core-rust/) 
 
 # UX testing sessions with Journalists and Activists 
 
