reduce page loading size from 9.05mb to 3.20mb

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -7,7 +7,7 @@ author: holgax
 In the last couple of weeks, location mattered deeply for Delta Chat, the "Chat over E-mail"
 messenger. It does make a difference if software development is situated in a Starbucks
 in San Francisco or around a refurbished coffee-bus in Kyiv, the embattled Ukrainian city just 200km away both from a war zone and from Czernobyl. Some of you prelinarily noticed the appearance of "on demand location streaming" in the advanced Android app settings.  This unique feature was only silently released ahead of our "Xyiv" gathering which happened in the last week of April 2019.  This post provides glimpses into what happened that week -- with the foreshadows of the coming *Rustocalypse* and evolving new takes on enmeshing UX, crypto and implementation activities in the wider decentralization space. 
-<img src="../assets/blog/xyiv-coffeebus.jpg" width="400" style="float: right; margin-right: 10px" /> 
+<img src="../assets/blog/xyiv-coffeebus.gif" width="400" style="float: right; margin-right: 10px" /> 
 Despite this post being a little long, there is a lot we don't mention here. After all, around 25 people arrived for "Xyiv", some by car and train, and some by plane from the other side of the planet (Hawaii).  Ages ranged from 8 years to well over 50. People forked off in sub groups at all times and even at basecamp, our 160 qm base main gathering place, there were typically 3-5 different groupings engaged with one topic or another. 
 
 ## On-demand location streaming 
@@ -26,7 +26,7 @@ All locations and messages are usually end-to-end encrypted and location
 data is not shared with third parties -- that is if your phone is generally configured 
 to not share location data with Google or other parties. 
 
-<img src="../assets/blog/xyiv-devs-pretest.jpg" width="200" style="float: left; margin-right: 10px" /> 
+<img src="../assets/blog/xyiv-devs-pretest.gif" width="200" style="float: left; margin-right: 10px" /> 
 While Bjoern and Richy were heavily preparing the Android side of location streaming
 in the last weeks, Nico was greatly pushing ahead the Desktop side of things
 which is not released yet but merged already into mainline "master" development. 
@@ -86,7 +86,7 @@ The Xyiv gathering started off with **two user-test sessions with journalists an
 performed by Xenia and Vadym who in March had published their findings on the [first round of UX tests in 2018](https://delta.chat/en/2019-03-30-uxreport). Delta Chat is a deeply UX driven project
 and in contrast to the many "casual" testings on various occassions, and from feedback on the lively [support forum](https://support.delta.chat), our Kyiv UX tests are carried out in a more systematic, scientific manner.  One warm-up task was to interpret prototype drawings for explaining how Autocrypt encryption works. The drawings are part of an attempt to educate with other images than the rather abstract "locks" and to convey that Autocrypt encryption is established opportunistically, instead of "up-front". A first confusion arose on the first panel of the drawing: people thought that the first message was already encrypted (because of the "weird characters") - this is in fact misleading, so we will try to change to a "clear text" phrase like "hey, let's party". Second, folks who were not drinking did not understand the metaphor of clanging glasses together, however, others liked this metaphor a lot, one tester said "when I come to Schottland I first feel that I do not understand their English, but after the first whiskey I understand everything".  The second phase of the testings involved testers looking carefully at Delta Chat screenshots for three minutes and telling what they saw and understood. 
 
-<img src="../assets/blog/xyiv-uxtable1.png" width="300" style="float: right; margin-right: 10px" /> 
+<img src="../assets/blog/xyiv-uxtable1.gif" width="300" style="float: right; margin-right: 10px" /> 
 After these two warm-up tasks, testers had to perform and evaluate prepared tasks in 
 four categories: 
 
@@ -107,7 +107,7 @@ Figuring out good ways to explain and refine Delta Chat's "decentralized key exc
 topic of UX sessions at the unconference. Integrating explanation drawings is a pending topic 
 with Delta Chat and part of efforts to [improve the FAQ](https://delta.chat/en/help#what-is-delta-chat).  A lot of discussions during Xyiv revolved around Delta Chat's opportunistic falling back to cleartext messages.  It happens when the "Autocrypt logic" determines that some chat members may otherwise not be able to read messages.  Not yet widely known, and not well explained, you can create "verified groups" which enforce e2e-encryption and which have been [determined by EU researchers to be safe against even active network or provider attacks](https://countermitm.readthedocs.io/en/latest/new.html). 
 
-<img src="../assets/blog/xyiv-fountain2.jpg" width="200" style="float: right; margin-right: 10px" /> 
+<img src="../assets/blog/xyiv-fountain2.gif" width="200" style="float: right; margin-right: 10px" /> 
 Some folks with experience in running collective e-mail infrastructure did sessions 
 around evolving [testrun.org](https://testrun.org), an experimental e-mail server used
 for UX tests with Delta Chat. Coming from four countries and as many different contexts, 
@@ -127,7 +127,7 @@ end, a verified e2e-encrypted group was boostrapped where talking continues ...
 quite safe against compromised e-mail providers or network attackers who actively 
 try listening in. 
 
-<img src="../assets/blog/xyiv-desktop1.png" width="200" style="float: right; margin-right: 10px" /> 
+<img src="../assets/blog/xyiv-desktop1.gif" width="200" style="float: right; margin-right: 10px" /> 
 During the Xyiv week, Jikstra, Magnus, Nico, Floris and Karissa worked out several improvements
 to Delta Chat Desktop. It is now possible for for linux distros to have a system wide install
 of Delta Chat with multiple per-user Desktop instances. Dependency management was improved for Mac
@@ -172,17 +172,17 @@ better arrange for help.
 
 # Gaming with decentralization 
 
-<img src="../assets/blog/xyiv-cards1.png" width="400" style="float: left; margin-right: 10px" /> 
+<a href="../assets/blog/xyiv-cards1.jpg"><img src="../assets/blog/xyiv-cards1.png" width="400" style="float: left; margin-right: 10px" /></a>
 
 The game on sunday, secretly prepared by Xenia with graphics from Demian, marked kind of a culmination of an already eventful week. Participants, including locals, were put into two groups, "Cubes" and "Spheres".  Players from both teams drew a card and played a role -- journalist, whistleblower, spy, politician with each side co-ordinated by one person sitting on Delta Chat desktop at the "basecamp" location.  Players turned on location streaming and had to carry out a complex set of concurrent htasks, with a lot of fun ensuing dynamics and confusion.  Special points were gained when one side managed to "jail" the other side's politician or journalist.  
 
 Co-incidentally, the sunday was also a religious culmination in it being the main day of ortodox eastern where everybody is out in the streets and churches.  
-<img src="../assets/blog/xyiv-church1b.jpg" width="200" style="float: right; margin-left: 10px" /> 
+<img src="../assets/blog/xyiv-church1b.png" width="200" style="float: right; margin-left: 10px" /> 
 <img src="../assets/blog/xyiv-dc4.jpg" width="100" style="float: left; margin-right: 10px" /> 
 So one of the ad-hoc tasks became taking photographs from inside a church. A Key task was to 
 finding marked "dead drops" at 12 places inside the city. Dead drops contained further tasks that involved finding and placing stickers. The Dead drops were added as "Points of interests" to the maps that players could access during game play. This "add POI" feature was added just one day before the game took place. 
 
-<img src="../assets/blog/xyiv-m.png" width="200" style="float: right; margin-left: 10px" /> 
+<img src="../assets/blog/xyiv-m.gif" width="200" style="float: right; margin-left: 10px" /> 
 The game play involved a lot of Delta Chat features. Both groups quickly setup 
 "verified groups" as they provide an easy way to get everyone into a group quickly. 
 One young "politician" in a blue jacket was found hiding in strange places ... it was certainly telling how problems and confusion escalated from the overall stress of trying to understand
