save another 130kb by using a thumbnail for the riesenrad

--- a/_posts/2019-05-08-xyiv.md
+++ b/_posts/2019-05-08-xyiv.md
@@ -44,7 +44,7 @@ on both Android and Desktop.
 
 # The coming Delta Chat Rustocalypse 
 
-<img src="../assets/blog/xyiv-riesenrad.jpg" width="400" style="float: left; margin-right: 10px" /> 
+<a href="../assets/blog/xyiv-riesenrad.jpg"><img src="../assets/blog/xyiv-riesenrad-thumb.gif" width="400" style="float: left; margin-right: 10px" /></a> 
 A line of heavy activities in the last weeks happend around 
 [RPGP](https://github.com/rpgp/rpgp), the world's first full-Rust
 implemenation of OpenPGP from [Friedel Ziegelmayer](https://github.com/dignifiedquire/). His new Rust library supports Autocrypt 1.1 primitives and will allow us to switch from RSA
